feat(categories): add category domain
